# stellar-tea

./: .gitignore  Cargo.toml  README-new.md  README.md  Stellar_Tea_Overview.md  env.example  environments.toml  eslint.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts
.cargo/: config.toml
.stellar/contract-ids/: stars-token.json  swap.json  tea-nft.json
.stellar/identity/: treasury.toml
contracts/game/: Cargo.toml
contracts/game/src/: config.rs  contract.rs  errors.rs  events.rs  lib.rs  limits.rs  marketplace.rs  mixing.rs  rewards.rs  tea.rs  util.rs
contracts/nft-tea/: Cargo.toml
contracts/nft-tea/src/: admin.rs  contract.rs  lib.rs  metadata.rs  storage.rs
contracts/swap/: Cargo.toml
contracts/swap/src/: lib.rs
contracts/tokens/balls/: Cargo.toml
contracts/tokens/balls/src/: admin.rs  balance.rs  contract.rs  lib.rs  metadata.rs
contracts/tokens/stars/: Cargo.toml
contracts/tokens/stars/src/: admin.rs  allowance.rs  balance.rs  burn.rs  contract.rs  lib.rs  metadata.rs
frontend/: .gitignore  README.md  components.json  next.config.ts  package.json  tailwind.config.ts  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  providers.tsx
frontend/src/app/generate/: page.tsx
frontend/src/app/marketplace/: page.tsx
frontend/src/hooks/: useWallet.ts  useWalletBalance.ts
frontend/src/lib/: stellarConfig.ts  storage.ts  wallet.ts
src/: App.tsx  index.css
src/components/: Card.tsx  TeaDashboard.tsx  WalletButton.tsx
src/components/layout/: AppFooter.tsx  AppHeader.tsx  WalletMenu.tsx
src/components/token/: TokenContractInterface.tsx
src/components/ui/: avatar.tsx  button.tsx  dialog.tsx  dropdown-menu.tsx  navigation-menu.tsx  popover.tsx  scroll-area.tsx  separator.tsx  sheet.tsx  tooltip.tsx
src/contracts/: clients.ts
src/hooks/: useIsMobile.ts  useSubscription.ts
src/pages/: Home.tsx  Test.css  Test.tsx
src/pages/contracts/: BallsToken.tsx  StarsToken.tsx  TeaGame.tsx  TeaNft.tsx
src/util/: contract.ts  friendbot.ts  soroban.ts  tokenMath.ts
(+50 files in other folders)
