[package]
name = "nft-tea"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "nft_tea"
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk.workspace = true
stellar-macros.workspace = true
stellar-tokens.workspace = true

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
