[package]
name = "balls-token"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "balls_token"
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk.workspace = true
stellar-access.workspace = true
stellar-macros.workspace = true
stellar-tokens.workspace = true

